--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</nav>
 	<section class="introduction">
-		<div class="content1">
+		<div class="content">
 			<h1>Introducing Karma</h1>
 			<h3>Bring WiFi with you, everywhere you go</h3>
 			<button>Learn More</button>
