--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
 			<button>Learn More</button>
 		</div>
 	</section>
+	<section class="cases">
+			<h1>Everyone needs a little Karma</h1>
+			<div class="devices"></div>
+			<div class="devices"></div>
+			<div class="devices"></div>		
+	</section>
 </body>
 </html>
