--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
 		</div>
 	</section>
 	<section class="cases">
+		<div class="content">
 			<h1>Everyone needs a little Karma</h1>
-			<div class="devices"></div>
-			<div class="devices"></div>
-			<div class="devices"></div>		
+			<ul>
+				<li> <img src="images/icon-devices.svg" width="127" height="127">
+					<h3>Internet for all devices</h3>
+				</li>
+				<li>
+					<img src="images/icon-coffee.svg" width="127" height="127">
+					<h3>Boost your Productivity</h3>
+				<li>
+					<img src="images/icon-refill.svg" width="127" height="127">
+					<h3>Pay as You Go</h3>
+				</li>
+			</ul>
+		</div>
 	</section>
 </body>
 </html>
