working on the footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -46,5 +47,28 @@
 			</ul>
 		</div>
 	</section>
+	<footer class="social">
+		<div>
+			<h4 class="join">Join us on</h4>
+				<ul>
+					<li>
+						<span class="fa-stack fa-lg">
+  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+  							<i class="fa fa-twitter fa-stack-1x"></i>
+					</li>
+					<li>
+						<span class="fa-stack fa-lg">
+  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+  							<i class="fa fa-facebook fa-stack-1x"></i>
+					</li>
+					<li>
+						<span class="fa-stack fa-lg">
+  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+  							<i class="fa fa-instagram fa-stack-1x"></i>
+					</li>
+			<p>© Karma Mobility, Inc.</p>
+		</ul>
+		</div>
+	</footer>
 </body>
 </html>
