finished the footer walkthrough[C

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			</ul>
 		</div>
 	</section>
+	<hr>
 	<footer class="social">
 		<div>
 			<h4 class="join">Join us on</h4>
@@ -66,7 +67,7 @@
   							<i class="fa fa-circle-thin fa-stack-2x"></i>
   							<i class="fa fa-instagram fa-stack-1x"></i>
 					</li>
-			<p>© Karma Mobility, Inc.</p>
+			<p class="KMinc">© Karma Mobility, Inc.</p>
 		</ul>
 		</div>
 	</footer>
